<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/large_padding"
    android:background="@color/background">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:contentDescription="@string/chat_logo_content_description"
        android:src="@drawable/ic_chat"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_chat_txt"
        android:textSize="@dimen/text_size_semiMedium"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/extra_small_margin"/>

    <!-- Dynamic status message -->
    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_someone_txt"
        android:textSize="@dimen/text_size_semi_small"
        android:textColor="@color/text_hint"
        android:gravity="center"
        android:layout_marginBottom="@dimen/extra_large_margin"/>

    <!-- Loading spinner shown while searching -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progressBar_width"
        android:layout_height="@dimen/progressBar_height"
        android:visibility="gone"
        android:indeterminateTint="@color/primary"
        android:layout_marginBottom="@dimen/medium_small_margin"/>

    <!-- Find chat button -->
    <Button
        android:id="@+id/findChatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_search_btn"
        android:backgroundTint="@color/primary"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_small"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_margin"/>


</LinearLayout>
